--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prismic-dom": "^2.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
